tests/neg-custom-args/captures/try.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/try.scala:24:4 -------------------------------------------
24 |    (x: CanThrow[Exception]) => x // error
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |Found:    (x: CT[Exception]^) ->'s1 CT[Exception]^{x}
   |Required: CT[Exception]^ => CT[Exception]^{any}
   |
   |Note that capability `x` is not included in capture set {any}
   |because (x : CT[Exception]^) is not visible from any in value a.
   |
   |where:    =>  refers to a root capability created in value a when checking argument to parameter op of method handle
   |          ^   refers to the root capability caps.any
   |          any is a root capability created in value a
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/try.scala:30:4 -------------------------------------------
30 |    (x: CanThrow[Exception]) => () => raise(new Exception)(using x) // error
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |Found:    (x: CT[Exception]^) ->'s2 () ->{x} Nothing
   |Required: CT[Exception]^ => () -> Nothing
   |
   |Note that capability `x` is not included in capture set {}.
   |
   |where:    => refers to a root capability created in value b when checking argument to parameter op of method handle
   |          ^  refers to the root capability caps.any
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/try.scala:36:4 -------------------------------------------
36 |    (x: CanThrow[Exception]) => // error
   |    ^
   |Capability `x` outlives its scope: it leaks into outer capture set 's3 which is owned by value xx.
   |The leakage occurred when trying to match the following types:
   |
   |Found:    (x: CT[Exception]^) ->'s4 () ->{x} Int
   |Required: CT[Exception]^ => () ->'s3 Int
   |
   |where:    => refers to a root capability created in value xx when checking argument to parameter op of method handle
   |          ^  refers to the root capability caps.any
   |
37 |      () =>
38 |        raise(new Exception)(using x)
39 |        22
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/try.scala:48:2 -------------------------------------------
48 |  (x: CanThrow[Exception]) =>  // error
   |  ^
   |Capability `x` outlives its scope: it leaks into outer capture set 's5 which is owned by value global.
   |The leakage occurred when trying to match the following types:
   |
   |Found:    (x: CT[Exception]^) ->'s6 () ->{x} Int
   |Required: CT[Exception]^ => () ->'s5 Int
   |
   |where:    => refers to a root capability created in value global when checking argument to parameter op of method handle
   |          ^  refers to the root capability caps.any
   |
49 |    () =>
50 |      raise(new Exception)(using x)
51 |      22
   |
   | longer explanation available when compiling with `-explain`
